test lien images

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <td id="poster" rowspan="8">
                 <div class="poster">
                     <a href="https://en.wikipedia.org/wiki/Star_Wars_(film)" target="_blank">
-                        <img src="/images/poster.png" alt="poster de star wars">
+                        <img src="images/poster.png" alt="poster de star wars">
                     </a>
                 </div>
             </td>
